begin_unit|revision:0.9.5;language:Java;cregit-version:0.0.1
begin_comment
comment|/*  * Licensed to the Apache Software Foundation (ASF) under one  * or more contributor license agreements.  See the NOTICE file  * distributed with this work for additional information  * regarding copyright ownership.  The ASF licenses this file  * to you under the Apache License, Version 2.0 (the  * "License"); you may not use this file except in compliance  *  with the License.  You may obtain a copy of the License at  *  *      http://www.apache.org/licenses/LICENSE-2.0  *  *  Unless required by applicable law or agreed to in writing, software  *  distributed under the License is distributed on an "AS IS" BASIS,  *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  *  See the License for the specific language governing permissions and  *  limitations under the License.  */
end_comment

begin_package
DECL|package|org.apache.hadoop.ozone.container.common.helpers
package|package
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|container
operator|.
name|common
operator|.
name|helpers
package|;
end_package

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hdds
operator|.
name|protocol
operator|.
name|datanode
operator|.
name|proto
operator|.
name|ContainerProtos
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hdds
operator|.
name|client
operator|.
name|BlockID
import|;
end_import

begin_import
import|import
name|com
operator|.
name|google
operator|.
name|common
operator|.
name|base
operator|.
name|Preconditions
import|;
end_import

begin_import
import|import
name|java
operator|.
name|io
operator|.
name|IOException
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|Collections
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|List
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|Map
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|TreeMap
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|ArrayList
import|;
end_import

begin_comment
comment|/**  * Helper class to convert Protobuf to Java classes.  */
end_comment

begin_class
DECL|class|BlockData
specifier|public
class|class
name|BlockData
block|{
DECL|field|blockID
specifier|private
specifier|final
name|BlockID
name|blockID
decl_stmt|;
DECL|field|metadata
specifier|private
specifier|final
name|Map
argument_list|<
name|String
argument_list|,
name|String
argument_list|>
name|metadata
decl_stmt|;
DECL|field|blockCommitSequenceId
specifier|private
name|long
name|blockCommitSequenceId
decl_stmt|;
comment|/**    * Represent a list of chunks.    * In order to reduce memory usage, chunkList is declared as an    * {@link Object}.    * When #elements == 0, chunkList is null.    * When #elements == 1, chunkList refers to the only element.    * When #elements> 1, chunkList refers to the list.    *    * Please note : when we are working with blocks, we don't care what they    * point to. So we We don't read chunkinfo nor validate them. It is    * responsibility of higher layer like ozone. We just read and write data    * from network.    */
DECL|field|chunkList
specifier|private
name|Object
name|chunkList
decl_stmt|;
comment|/**    * total size of the key.    */
DECL|field|size
specifier|private
name|long
name|size
decl_stmt|;
comment|/**    * Constructs a BlockData Object.    *    * @param blockID    */
DECL|method|BlockData (BlockID blockID)
specifier|public
name|BlockData
parameter_list|(
name|BlockID
name|blockID
parameter_list|)
block|{
name|this
operator|.
name|blockID
operator|=
name|blockID
expr_stmt|;
name|this
operator|.
name|metadata
operator|=
operator|new
name|TreeMap
argument_list|<>
argument_list|()
expr_stmt|;
name|this
operator|.
name|size
operator|=
literal|0
expr_stmt|;
name|blockCommitSequenceId
operator|=
literal|0
expr_stmt|;
block|}
DECL|method|getBlockCommitSequenceId ()
specifier|public
name|long
name|getBlockCommitSequenceId
parameter_list|()
block|{
return|return
name|blockCommitSequenceId
return|;
block|}
DECL|method|setBlockCommitSequenceId (long blockCommitSequenceId)
specifier|public
name|void
name|setBlockCommitSequenceId
parameter_list|(
name|long
name|blockCommitSequenceId
parameter_list|)
block|{
name|this
operator|.
name|blockCommitSequenceId
operator|=
name|blockCommitSequenceId
expr_stmt|;
block|}
comment|/**    * Returns a blockData object from the protobuf data.    *    * @param data - Protobuf data.    * @return - BlockData    * @throws IOException    */
DECL|method|getFromProtoBuf (ContainerProtos.BlockData data)
specifier|public
specifier|static
name|BlockData
name|getFromProtoBuf
parameter_list|(
name|ContainerProtos
operator|.
name|BlockData
name|data
parameter_list|)
throws|throws
name|IOException
block|{
name|BlockData
name|blockData
init|=
operator|new
name|BlockData
argument_list|(
name|BlockID
operator|.
name|getFromProtobuf
argument_list|(
name|data
operator|.
name|getBlockID
argument_list|()
argument_list|)
argument_list|)
decl_stmt|;
for|for
control|(
name|int
name|x
init|=
literal|0
init|;
name|x
operator|<
name|data
operator|.
name|getMetadataCount
argument_list|()
condition|;
name|x
operator|++
control|)
block|{
name|blockData
operator|.
name|addMetadata
argument_list|(
name|data
operator|.
name|getMetadata
argument_list|(
name|x
argument_list|)
operator|.
name|getKey
argument_list|()
argument_list|,
name|data
operator|.
name|getMetadata
argument_list|(
name|x
argument_list|)
operator|.
name|getValue
argument_list|()
argument_list|)
expr_stmt|;
block|}
name|blockData
operator|.
name|setChunks
argument_list|(
name|data
operator|.
name|getChunksList
argument_list|()
argument_list|)
expr_stmt|;
if|if
condition|(
name|data
operator|.
name|hasSize
argument_list|()
condition|)
block|{
name|Preconditions
operator|.
name|checkArgument
argument_list|(
name|data
operator|.
name|getSize
argument_list|()
operator|==
name|blockData
operator|.
name|getSize
argument_list|()
argument_list|)
expr_stmt|;
block|}
name|blockData
operator|.
name|setBlockCommitSequenceId
argument_list|(
name|data
operator|.
name|getBlockCommitSequenceId
argument_list|()
argument_list|)
expr_stmt|;
return|return
name|blockData
return|;
block|}
comment|/**    * Returns a Protobuf message from BlockData.    * @return Proto Buf Message.    */
DECL|method|getProtoBufMessage ()
specifier|public
name|ContainerProtos
operator|.
name|BlockData
name|getProtoBufMessage
parameter_list|()
block|{
name|ContainerProtos
operator|.
name|BlockData
operator|.
name|Builder
name|builder
init|=
name|ContainerProtos
operator|.
name|BlockData
operator|.
name|newBuilder
argument_list|()
decl_stmt|;
name|builder
operator|.
name|setBlockID
argument_list|(
name|this
operator|.
name|blockID
operator|.
name|getDatanodeBlockIDProtobuf
argument_list|()
argument_list|)
expr_stmt|;
for|for
control|(
name|Map
operator|.
name|Entry
argument_list|<
name|String
argument_list|,
name|String
argument_list|>
name|entry
range|:
name|metadata
operator|.
name|entrySet
argument_list|()
control|)
block|{
name|ContainerProtos
operator|.
name|KeyValue
operator|.
name|Builder
name|keyValBuilder
init|=
name|ContainerProtos
operator|.
name|KeyValue
operator|.
name|newBuilder
argument_list|()
decl_stmt|;
name|builder
operator|.
name|addMetadata
argument_list|(
name|keyValBuilder
operator|.
name|setKey
argument_list|(
name|entry
operator|.
name|getKey
argument_list|()
argument_list|)
operator|.
name|setValue
argument_list|(
name|entry
operator|.
name|getValue
argument_list|()
argument_list|)
operator|.
name|build
argument_list|()
argument_list|)
expr_stmt|;
block|}
name|builder
operator|.
name|addAllChunks
argument_list|(
name|getChunks
argument_list|()
argument_list|)
expr_stmt|;
name|builder
operator|.
name|setSize
argument_list|(
name|size
argument_list|)
expr_stmt|;
name|builder
operator|.
name|setBlockCommitSequenceId
argument_list|(
name|blockCommitSequenceId
argument_list|)
expr_stmt|;
return|return
name|builder
operator|.
name|build
argument_list|()
return|;
block|}
comment|/**    * Adds metadata.    *    * @param key   - Key    * @param value - Value    * @throws IOException    */
DECL|method|addMetadata (String key, String value)
specifier|public
specifier|synchronized
name|void
name|addMetadata
parameter_list|(
name|String
name|key
parameter_list|,
name|String
name|value
parameter_list|)
throws|throws
name|IOException
block|{
if|if
condition|(
name|this
operator|.
name|metadata
operator|.
name|containsKey
argument_list|(
name|key
argument_list|)
condition|)
block|{
throw|throw
operator|new
name|IOException
argument_list|(
literal|"This key already exists. Key "
operator|+
name|key
argument_list|)
throw|;
block|}
name|metadata
operator|.
name|put
argument_list|(
name|key
argument_list|,
name|value
argument_list|)
expr_stmt|;
block|}
DECL|method|getMetadata ()
specifier|public
specifier|synchronized
name|Map
argument_list|<
name|String
argument_list|,
name|String
argument_list|>
name|getMetadata
parameter_list|()
block|{
return|return
name|Collections
operator|.
name|unmodifiableMap
argument_list|(
name|this
operator|.
name|metadata
argument_list|)
return|;
block|}
comment|/**    * Returns value of a key.    */
DECL|method|getValue (String key)
specifier|public
specifier|synchronized
name|String
name|getValue
parameter_list|(
name|String
name|key
parameter_list|)
block|{
return|return
name|metadata
operator|.
name|get
argument_list|(
name|key
argument_list|)
return|;
block|}
comment|/**    * Deletes a metadata entry from the map.    *    * @param key - Key    */
DECL|method|deleteKey (String key)
specifier|public
specifier|synchronized
name|void
name|deleteKey
parameter_list|(
name|String
name|key
parameter_list|)
block|{
name|metadata
operator|.
name|remove
argument_list|(
name|key
argument_list|)
expr_stmt|;
block|}
annotation|@
name|SuppressWarnings
argument_list|(
literal|"unchecked"
argument_list|)
DECL|method|castChunkList ()
specifier|private
name|List
argument_list|<
name|ContainerProtos
operator|.
name|ChunkInfo
argument_list|>
name|castChunkList
parameter_list|()
block|{
return|return
operator|(
name|List
argument_list|<
name|ContainerProtos
operator|.
name|ChunkInfo
argument_list|>
operator|)
name|chunkList
return|;
block|}
comment|/**    * Returns chunks list.    *    * @return list of chunkinfo.    */
DECL|method|getChunks ()
specifier|public
name|List
argument_list|<
name|ContainerProtos
operator|.
name|ChunkInfo
argument_list|>
name|getChunks
parameter_list|()
block|{
return|return
name|chunkList
operator|==
literal|null
condition|?
name|Collections
operator|.
name|emptyList
argument_list|()
else|:
name|chunkList
operator|instanceof
name|ContainerProtos
operator|.
name|ChunkInfo
condition|?
name|Collections
operator|.
name|singletonList
argument_list|(
operator|(
name|ContainerProtos
operator|.
name|ChunkInfo
operator|)
name|chunkList
argument_list|)
else|:
name|Collections
operator|.
name|unmodifiableList
argument_list|(
name|castChunkList
argument_list|()
argument_list|)
return|;
block|}
comment|/**    * Adds chinkInfo to the list.    */
DECL|method|addChunk (ContainerProtos.ChunkInfo chunkInfo)
specifier|public
name|void
name|addChunk
parameter_list|(
name|ContainerProtos
operator|.
name|ChunkInfo
name|chunkInfo
parameter_list|)
block|{
if|if
condition|(
name|chunkList
operator|==
literal|null
condition|)
block|{
name|chunkList
operator|=
name|chunkInfo
expr_stmt|;
block|}
else|else
block|{
specifier|final
name|List
argument_list|<
name|ContainerProtos
operator|.
name|ChunkInfo
argument_list|>
name|list
decl_stmt|;
if|if
condition|(
name|chunkList
operator|instanceof
name|ContainerProtos
operator|.
name|ChunkInfo
condition|)
block|{
name|list
operator|=
operator|new
name|ArrayList
argument_list|<>
argument_list|(
literal|2
argument_list|)
expr_stmt|;
name|list
operator|.
name|add
argument_list|(
operator|(
name|ContainerProtos
operator|.
name|ChunkInfo
operator|)
name|chunkList
argument_list|)
expr_stmt|;
name|chunkList
operator|=
name|list
expr_stmt|;
block|}
else|else
block|{
name|list
operator|=
name|castChunkList
argument_list|()
expr_stmt|;
block|}
name|list
operator|.
name|add
argument_list|(
name|chunkInfo
argument_list|)
expr_stmt|;
block|}
name|size
operator|+=
name|chunkInfo
operator|.
name|getLen
argument_list|()
expr_stmt|;
block|}
comment|/**    * removes the chunk.    */
DECL|method|removeChunk (ContainerProtos.ChunkInfo chunkInfo)
specifier|public
name|boolean
name|removeChunk
parameter_list|(
name|ContainerProtos
operator|.
name|ChunkInfo
name|chunkInfo
parameter_list|)
block|{
specifier|final
name|boolean
name|removed
decl_stmt|;
if|if
condition|(
name|chunkList
operator|instanceof
name|List
condition|)
block|{
specifier|final
name|List
argument_list|<
name|ContainerProtos
operator|.
name|ChunkInfo
argument_list|>
name|list
init|=
name|castChunkList
argument_list|()
decl_stmt|;
name|removed
operator|=
name|list
operator|.
name|remove
argument_list|(
name|chunkInfo
argument_list|)
expr_stmt|;
if|if
condition|(
name|list
operator|.
name|size
argument_list|()
operator|==
literal|1
condition|)
block|{
name|chunkList
operator|=
name|list
operator|.
name|get
argument_list|(
literal|0
argument_list|)
expr_stmt|;
block|}
block|}
elseif|else
if|if
condition|(
name|chunkInfo
operator|.
name|equals
argument_list|(
name|chunkList
argument_list|)
condition|)
block|{
name|chunkList
operator|=
literal|null
expr_stmt|;
name|removed
operator|=
literal|true
expr_stmt|;
block|}
else|else
block|{
name|removed
operator|=
literal|false
expr_stmt|;
block|}
if|if
condition|(
name|removed
condition|)
block|{
name|size
operator|-=
name|chunkInfo
operator|.
name|getLen
argument_list|()
expr_stmt|;
block|}
return|return
name|removed
return|;
block|}
comment|/**    * Returns container ID.    *    * @return long.    */
DECL|method|getContainerID ()
specifier|public
name|long
name|getContainerID
parameter_list|()
block|{
return|return
name|blockID
operator|.
name|getContainerID
argument_list|()
return|;
block|}
comment|/**    * Returns LocalID.    * @return long.    */
DECL|method|getLocalID ()
specifier|public
name|long
name|getLocalID
parameter_list|()
block|{
return|return
name|blockID
operator|.
name|getLocalID
argument_list|()
return|;
block|}
comment|/**    * Return Block ID.    * @return BlockID.    */
DECL|method|getBlockID ()
specifier|public
name|BlockID
name|getBlockID
parameter_list|()
block|{
return|return
name|blockID
return|;
block|}
comment|/**    * Sets Chunk list.    *    * @param chunks - List of chunks.    */
DECL|method|setChunks (List<ContainerProtos.ChunkInfo> chunks)
specifier|public
name|void
name|setChunks
parameter_list|(
name|List
argument_list|<
name|ContainerProtos
operator|.
name|ChunkInfo
argument_list|>
name|chunks
parameter_list|)
block|{
if|if
condition|(
name|chunks
operator|==
literal|null
condition|)
block|{
name|chunkList
operator|=
literal|null
expr_stmt|;
name|size
operator|=
literal|0L
expr_stmt|;
block|}
else|else
block|{
specifier|final
name|int
name|n
init|=
name|chunks
operator|.
name|size
argument_list|()
decl_stmt|;
name|chunkList
operator|=
name|n
operator|==
literal|0
condition|?
literal|null
else|:
name|n
operator|==
literal|1
condition|?
name|chunks
operator|.
name|get
argument_list|(
literal|0
argument_list|)
else|:
name|chunks
expr_stmt|;
name|size
operator|=
name|chunks
operator|.
name|parallelStream
argument_list|()
operator|.
name|mapToLong
argument_list|(
name|ContainerProtos
operator|.
name|ChunkInfo
operator|::
name|getLen
argument_list|)
operator|.
name|sum
argument_list|()
expr_stmt|;
block|}
block|}
comment|/**    * Get the total size of chunks allocated for the key.    * @return total size of the key.    */
DECL|method|getSize ()
specifier|public
name|long
name|getSize
parameter_list|()
block|{
return|return
name|size
return|;
block|}
block|}
end_class

end_unit

